styles/note.css
#noteArea
{
	width: min(41vh, 90vw);
	height: 20vh;

	position: absolute;
	left: 50vw;
	top: 5vh;
	transform: translate(-50%, 0);
}

#note
{
	position: absolute;
	left: -2vh;
	top: auto;
	bottom: 0;
	max-height: 20vh;
	width: 100%;

	color: white;
	font-family: "Caveat", serif;
	font-size: 4vh;
	padding: 2vh;

	background-color: rgba(10, 22, 48, 0.75);
	backdrop-filter: blur(10px);
	/* border: 1px solid var(--color-highlight); */
	/* border-radius: 3vh; */

	/* filter: drop-shadow(0 0 30px var(--color-highlight)); */
}

.animatedText
{
	display: inline-block;
	opacity: 0;
	animation: animFadeIn 0.5s ease-out forwards;
}

.animNoteIn, .animNoteOut
{
	animation-iteration-count: 1;
	animation-timing-function: ease;
	animation-fill-mode: forwards;
}
.animNoteIn
{
	opacity: 0;
	animation-name: animFadeIn;
	animation-duration: 1s;
	/* animation-delay: 1.75s;  */
}
.animNoteOut
{
	opacity: 1;
	animation-name: animFadeOut; /* Simply reverting "in" animation does't work */
	animation-duration: 0.2s;
}

